@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005-2016, G. Weirich and Elexis
+ * Copyright (c) 2005-2023, G. Weirich and Elexis
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -11,13 +11,17 @@
  *******************************************************************************/
 package ch.elexis.core.ui.dialogs;
 
-import org.apache.commons.lang3.StringUtils;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
+import javax.inject.Inject;
+
+import org.apache.commons.lang3.StringUtils;
 import org.eclipse.core.runtime.NullProgressMonitor;
+import org.eclipse.e4.ui.di.UIEventTopic;
 import org.eclipse.jface.dialogs.IDialogConstants;
 import org.eclipse.jface.dialogs.TitleAreaDialog;
 import org.eclipse.jface.viewers.CellEditor;
@@ -45,6 +49,7 @@ import org.eclipse.swt.events.SelectionListener;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.Font;
 import org.eclipse.swt.graphics.FontData;
+import org.eclipse.swt.graphics.Point;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.Button;
@@ -73,8 +78,10 @@ import ch.elexis.core.model.IStock;
 import ch.elexis.core.model.IStockEntry;
 import ch.elexis.core.model.IXid;
 import ch.elexis.core.model.OrderEntryState;
+import ch.elexis.core.services.IContextService;
 import ch.elexis.core.services.holder.ConfigServiceHolder;
 import ch.elexis.core.ui.actions.ScannerEvents;
+import ch.elexis.core.ui.e4.util.CoreUiUtil;
 import ch.elexis.core.ui.text.ElexisText;
 import ch.elexis.core.ui.util.SWTHelper;
 import ch.elexis.data.BestellungEntry;
@@ -84,9 +91,18 @@ import ch.elexis.data.BestellungEntry;
  *
  */
 public class OrderImportDialog extends TitleAreaDialog {
+
 	private static final String ALLE_MARKIEREN = " Alle markieren ";
 	private static final int DIFF_SPINNER_MIN = 1;
 	private static final int DIFF_SPINNER_DEFAULT = 1;
+
+	public static int ACTION_MODE_REGISTER = 0; // Einbuchungsmodus
+	public static int ACTION_MODE_INVENTORY = 1; // Inventurmodus
+
+	@Inject
+	private IContextService contextService;
+
+	private String previousBarcodeInputConsumer;
 
 	/**
 	 * Order to act on
@@ -102,13 +118,27 @@ public class OrderImportDialog extends TitleAreaDialog {
 	private Color verifiedColor;
 	private Font boldFont;
 
+	private int actionMode;
+
+	/**
+	 * @wbp.parser.constructor
+	 */
 	public OrderImportDialog(Shell parentShell, IOrder order) {
+		this(parentShell, order, 0);
+	}
+
+	public OrderImportDialog(Shell parentShell, IOrder order, int actionMode) {
 		super(parentShell);
 		this.order = order;
+		this.actionMode = actionMode;
 		setShellStyle(getShellStyle() | SWT.SHELL_TRIM);
 
+		CoreUiUtil.injectServices(this);
+		previousBarcodeInputConsumer = (String) contextService.getNamed("barcodeInputConsumer").orElse(null);
+		contextService.getRootContext().setNamed("barcodeInputConsumer", OrderImportDialog.class.getName());
+
 		orderElements = new ArrayList<OrderElement>();
-		List<IOrderEntry> items = order.getEntries();
+		List<IOrderEntry> items = order != null ? order.getEntries() : Collections.emptyList();
 		for (IOrderEntry entry : items) {
 			// only show entries which are not done
 			if (entry.getState() != OrderEntryState.DONE) {
@@ -137,6 +167,11 @@ public class OrderImportDialog extends TitleAreaDialog {
 			}
 		}
 	}
+
+	@Override
+	protected Point getInitialSize() {
+		return new Point(700, 500);
+	};
 
 	@Override
 	protected Control createDialogArea(Composite parent) {
@@ -216,17 +251,20 @@ public class OrderImportDialog extends TitleAreaDialog {
 
 		viewer.setContentProvider(new ViewerContentProvider());
 		viewer.setInput(this);
-		viewer.setComparator(new ViewerComparator() {
-			public int compare(Viewer viewer, Object e1, Object e2) {
-				IArticle a1 = ((OrderElement) e1).getArticle();
-				IArticle a2 = ((OrderElement) e2).getArticle();
+		if (actionMode == ACTION_MODE_REGISTER) {
+			// in inventory mode we want to stay with the scan order
+			viewer.setComparator(new ViewerComparator() {
+				public int compare(Viewer viewer, Object e1, Object e2) {
+					IArticle a1 = ((OrderElement) e1).getArticle();
+					IArticle a2 = ((OrderElement) e2).getArticle();
 
-				if (a1 != null && a2 != null) {
-					return a1.getName().compareTo(a2.getName());
-				}
-				return 0;
-			};
-		});
+					if (a1 != null && a2 != null) {
+						return a1.getName().compareTo(a2.getName());
+					}
+					return 0;
+				};
+			});
+		}
 
 		Composite cButtons = new Composite(mainArea, SWT.NONE);
 		cButtons.setLayout(new GridLayout(2, false));
@@ -253,12 +291,15 @@ public class OrderImportDialog extends TitleAreaDialog {
 
 		});
 		Button importButton = new Button(cButtons, SWT.PUSH);
-		GridData gd = new GridData(SWT.RIGHT, SWT.CENTER, false, false);
-		importButton.setLayoutData(gd);
-		importButton.setText("Lagerbestände anpassen");
+		importButton.setLayoutData(new GridData(SWT.RIGHT, SWT.CENTER, false, false));
+		importButton.setText("Lagerbestände markierte anpassen");
 		importButton.addSelectionListener(new SelectionAdapter() {
 			public void widgetSelected(SelectionEvent e) {
-				doImport();
+				if (actionMode == ACTION_MODE_REGISTER) {
+					doImport();
+				} else if (actionMode == ACTION_MODE_INVENTORY) {
+					doFixInventory();
+				}
 			}
 		});
 		cButtons.setLayoutData(SWTHelper.getFillGridData(1, true, 1, false));
@@ -294,7 +335,7 @@ public class OrderImportDialog extends TitleAreaDialog {
 			public Object getValue(Object element) {
 				if (element instanceof OrderElement) {
 					OrderElement orderElement = (OrderElement) element;
-					return new Boolean(orderElement.isVerified());
+					return Boolean.valueOf(orderElement.isVerified());
 				} else {
 					return null;
 				}
@@ -382,16 +423,27 @@ public class OrderImportDialog extends TitleAreaDialog {
 	@Override
 	public void create() {
 		super.create();
-		if (order != null) {
-			setTitle("Bestellung " + order.getLabel() + " im Lager einbuchen");
-		} else {
-			setTitle("Bestellung im Lager einbuchen");
+
+		if (actionMode == ACTION_MODE_REGISTER) {
+			if (order != null) {
+				setTitle("Bestellung " + order.getLabel() + " im Lager einbuchen");
+			} else {
+				setTitle("Bestellung im Lager einbuchen");
+			}
+
+			setMessage("Bitte überprüfen Sie alle bestellten Artikel. Überprüfte Artikel werden grün angezeigt."
+					+ " Bei der Anpassung der Lagerbestände werden nur jene Artikel"
+					+ " berücksichtigt, bei denen unter \"OK\" ein Haken gesetzt ist.");
+
+			getShell().setText("Bestellung im Lager einbuchen");
+
+		} else if (actionMode == ACTION_MODE_INVENTORY) {
+			setTitle("Inventurmodus");
+			getShell().setText("Inventurmodus");
+			setMessage(
+					"Bitte scannen Sie die Medikamente zur Inventur. Mehrfaches Scannen desselben Artikels führ zur Erhöhung der Anzahl."
+							+ " Gescannte Medikamente werden unten angezeigt und können anschliessend als IST-Bestand übernommen werden.");
 		}
-		setMessage("Bitte überprüfen Sie alle bestellten Artikel." + " Überprüfte Artikel werden grün angezeigt."
-				+ " Bei der Anpassung der Lagerbestände werden nur jene Artikel"
-				+ " berücksichtigt, bei denen unter \"OK\" ein Haken gesetzt ist.");
-		// setTitleImage(...));
-		getShell().setText("Bestellung im Lager einbuchen");
 	}
 
 	// Replace OK/Cancel buttons by a close button
@@ -405,27 +457,58 @@ public class OrderImportDialog extends TitleAreaDialog {
 		super.okPressed();
 	}
 
+	boolean subscribed = true;
+
+	@Override
+	public boolean close() {
+		contextService.getRootContext().setNamed("barcodeInputConsumer", previousBarcodeInputConsumer);
+		CoreUiUtil.uninjectServices(this);
+		return super.close();
+	}
+
 	// update the table according to the input from the scanner
 	private void applyScanner() {
 		int diff = diffSpinner.getSelection();
-
 		String ean = eanText.getText().trim();
-		// remove silly characters from scanner
-		ean = ean.replaceAll(new Character(SWT.CR).toString(), StringUtils.EMPTY);
-		ean = ean.replaceAll(new Character(SWT.LF).toString(), StringUtils.EMPTY);
-		ean = ean.replaceAll(new Character((char) 0).toString(), StringUtils.EMPTY);
+		applyScanner(ean, diff, null);
+	}
+
+	private void applyScanner(String gtin, int diff, IArticle article) {
+		gtin = gtin.replaceAll(Character.valueOf(SWT.CR).toString(), StringUtils.EMPTY);
+		gtin = gtin.replaceAll(Character.valueOf(SWT.LF).toString(), StringUtils.EMPTY);
+		gtin = gtin.replaceAll(Character.valueOf((char) 0).toString(), StringUtils.EMPTY);
 
 		eanText.setText(StringUtils.EMPTY);
 		diffSpinner.setSelection(DIFF_SPINNER_DEFAULT);
 
-		OrderElement orderElement = findOrderElementByEAN(ean);
+		OrderElement orderElement = findOrderElementByEAN(gtin);
 		if (orderElement != null) {
 			int newAmount = orderElement.getAmount() + diff;
 			updateOrderElement(orderElement, newAmount);
 		} else {
-			ScannerEvents.beep();
-			SWTHelper.alert("Artikel nicht bestellt",
-					"Dieser Artikel wurde nicht bestellt. Der Bestand kann nicht automatisch angepasst werden.");
+			if (actionMode == ACTION_MODE_INVENTORY) {
+				String mandatorId = ContextServiceHolder.get().getActiveMandator().get().getId();
+				IStock mandatorDefaultStock = StockServiceHolder.get().getMandatorDefaultStock(mandatorId);
+				IStockEntry transientStockEntry = new TransientStockEntry(article, mandatorDefaultStock);
+				OrderElement _orderElement = new OrderElement(TransientOrderEntry.getInstance(), transientStockEntry,
+						diff);
+				orderElements.add(_orderElement);
+			} else {
+				ScannerEvents.beep();
+				SWTHelper.alert("Artikel nicht bestellt",
+						"Dieser Artikel wurde nicht bestellt. Der Bestand kann nicht automatisch angepasst werden.");
+			}
+		}
+		viewer.refresh();
+	}
+
+	@Inject
+	public void barcodeEvent(@org.eclipse.e4.core.di.annotations.Optional @UIEventTopic(ElexisEventTopics.BASE_EVENT
+			+ "barcodeinput") Object object, IContextService contextService) {
+		if (object instanceof IArticle && StringUtils.equals(OrderImportDialog.class.getName(),
+				(String) contextService.getNamed("barcodeInputConsumer").orElse(null))) {
+			IArticle article = ((IArticle) object);
+			applyScanner(article.getGtin(), 1, article);
 		}
 	}
 
@@ -446,8 +529,36 @@ public class OrderImportDialog extends TitleAreaDialog {
 
 	private void updateOrderElement(OrderElement orderElement, int newAmount) {
 		orderElement.setAmount(newAmount);
-		orderElement.setVerified(true);
+		if (ACTION_MODE_INVENTORY != actionMode) {
+			orderElement.setVerified(true);
+		}
 		viewer.update(orderElement, null);
+	}
+
+	private void doFixInventory() {
+		for (OrderElement orderElement : orderElements) {
+			if (orderElement.isVerified()) {
+				IStock stock = orderElement.getStockEntry().getStock();
+				IStockEntry realEntry = StockServiceHolder.get().findStockEntryForArticleInStock(stock,
+						orderElement.getStockEntry().getArticle());
+				if (realEntry != null) {
+					LockResponse lockResponse = LocalLockServiceHolder.get().acquireLockBlocking(realEntry, 1,
+							new NullProgressMonitor());
+					if (lockResponse.isOk()) {
+						realEntry.setCurrentStock(orderElement.getAmount());
+						orderElement.setVerified(false);
+						CoreModelServiceHolder.get().save(realEntry);
+						LocalLockServiceHolder.get().releaseLock(lockResponse.getLockInfo());
+						ContextServiceHolder.get().postEvent(ElexisEventTopics.EVENT_UPDATE, realEntry);
+					} else {
+						throw new IllegalStateException(
+								"Could not acquire lock for stockEntry [" + realEntry.getArticle().getLabel() + "]"); //$NON-NLS-1$ //$NON-NLS-2$
+					}
+
+				}
+			}
+		}
+		viewer.refresh();
 	}
 
 	// read in verified order
@@ -581,12 +692,16 @@ public class OrderImportDialog extends TitleAreaDialog {
 				if (stockEntry instanceof TransientStockEntry) {
 					if (((TransientStockEntry) stockEntry).isCreated()) {
 						IStockEntry created = ((TransientStockEntry) stockEntry).getCreated();
-						text = new Integer(created.getCurrentStock()).toString();
+						text = Integer.valueOf(created.getCurrentStock()).toString();
 					} else {
-						text = "bisher kein Lagerartikel";
+						if (ACTION_MODE_INVENTORY == actionMode) {
+							text = stockEntry.getStock().getCode();
+						} else {
+							text = "bisher kein Lagerartikel";
+						}
 					}
 				} else {
-					text = new Integer(stockEntry.getCurrentStock()).toString();
+					text = Integer.valueOf(stockEntry.getCurrentStock()).toString();
 				}
 			}
 
@@ -636,11 +751,17 @@ public class OrderImportDialog extends TitleAreaDialog {
 	private class TransientStockEntry implements IStockEntry {
 
 		private IArticle article;
+		private IStock stock;
 
 		private IStockEntry created = null;
 
 		public TransientStockEntry(IArticle article) {
+			this(article, null);
+		}
+
+		public TransientStockEntry(IArticle article, IStock stock) {
 			this.article = article;
+			this.stock = stock;
 		}
 
 		public IStockEntry create(OrderElement orderElement) {
@@ -719,7 +840,10 @@ public class OrderImportDialog extends TitleAreaDialog {
 
 		@Override
 		public IStock getStock() {
-			return StockServiceHolder.get().getDefaultStock();
+			if (stock == null) {
+				return StockServiceHolder.get().getDefaultStock();
+			}
+			return stock;
 		}
 
 		@Override
@@ -761,9 +885,111 @@ public class OrderImportDialog extends TitleAreaDialog {
 
 		@Override
 		public Long getLastupdate() {
-			// TODO Auto-generated method stub
 			return null;
 		}
+	}
+
+	private static class TransientOrderEntry implements IOrderEntry {
+
+		private static TransientOrderEntry instance;
+
+		@Override
+		public String getId() {
+			return null;
+		}
+
+		public static IOrderEntry getInstance() {
+			if (TransientOrderEntry.instance == null) {
+				TransientOrderEntry.instance = new TransientOrderEntry();
+			}
+			return TransientOrderEntry.instance;
+		}
+
+		@Override
+		public String getLabel() {
+			return null;
+		}
+
+		@Override
+		public boolean addXid(String domain, String id, boolean updateIfExists) {
+			return false;
+		}
+
+		@Override
+		public IXid getXid(String domain) {
+			return null;
+		}
+
+		@Override
+		public Long getLastupdate() {
+			return null;
+		}
+
+		@Override
+		public boolean isDeleted() {
+			return false;
+		}
+
+		@Override
+		public void setDeleted(boolean value) {
+		}
+
+		@Override
+		public IOrder getOrder() {
+			return null;
+		}
+
+		@Override
+		public void setOrder(IOrder value) {
+		}
+
+		@Override
+		public IStock getStock() {
+			return null;
+		}
+
+		@Override
+		public void setStock(IStock value) {
+		}
+
+		@Override
+		public int getAmount() {
+			return 0;
+		}
+
+		@Override
+		public void setAmount(int value) {
+		}
+
+		@Override
+		public IArticle getArticle() {
+			return null;
+		}
+
+		@Override
+		public void setArticle(IArticle value) {
+
+		}
+
+		@Override
+		public IContact getProvider() {
+			return null;
+		}
+
+		@Override
+		public void setProvider(IContact value) {
+
+		}
+
+		@Override
+		public OrderEntryState getState() {
+			return null;
+		}
+
+		@Override
+		public void setState(OrderEntryState value) {
+		}
+
 	}
 
 	private class OrderElement {
@@ -809,7 +1035,7 @@ public class OrderImportDialog extends TitleAreaDialog {
 		}
 
 		String getAmountAsString() {
-			return new Integer(amount).toString();
+			return Integer.valueOf(amount).toString();
 		}
 
 		public IStockEntry getStockEntry() {
